<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="TypographyEllipsis">
    <string name="app_name">Simple List</string>

    <string name="common_button_ok">OK</string>
    <string name="common_button_process">Process</string>
    <string name="common_button_cancel">Cancel</string>
    <string name="common_button_close">Close</string>
    <string name="common_button_save">Save</string>
    <string name="common_title_error">Error</string>
    <string name="common_version">app version:</string>

    <string name="menu_sorting">sorting:</string>
    <string name="menu_sorting_name_asc">by name A -> Z</string>
    <string name="menu_sorting_name_desc">by name Z -> A</string>
    <string name="menu_sorting_lists_above">lists above</string>
    <string name="menu_sorting_checked_below">completed below</string>
    <string name="menu_list">List...</string>
    <string name="menu_data">Data...</string>
    <string name="menu_settings">Settings...</string>

    <string name="editor_tab_item">Item</string>
    <string name="editor_tab_list">List</string>
    <string name="editor_hint_name">Name</string>
    <string name="editor_hint_description">Description</string>
    <string name="editor_checkbox_checkable">is completable</string>
    <string name="editor_button_delete">Delete</string>
    <string name="editor_button_insert">Add</string>
    <string name="editor_confirm_delete_item">Delete the item?</string>
    <string name="editor_confirm_delete_list">Delete the list and all it\'s items?</string>

    <string name="settings_title">Settings</string>
    <string name="settings_useadd_text">Top bar icon \"+\"</string>
    <string name="settings_useadd_help">Show \"Add\" button as an icon in the top bar.</string>
    <string name="settings_usefab_text">Floating button \"+\"</string>
    <string name="settings_usefab_help">Show \"Add\" button as a floating button in the bottom right screen corner.</string>
    <string name="settings_confirmdelete_text">Confirmation of deletion</string>
    <string name="settings_confirmdelete_help">Show confirmation dialog before item deletion.</string>
    <string name="settings_checkedcolor_text">Gray completed</string>
    <string name="settings_checkedcolor_help">Use gray color for completed items.</string>
    <string name="settings_oldui_text">Old list UI</string>
    <string name="settings_oldui_help">Use old interface (without checkboxes) to list items control:\nclick - check/uncheck the item\nlong click - open the item</string>
    <string name="settings_help_label">Click the texts to get help</string>

    <string name="info_title">Your data status</string>
    <string name="info_lists">number of lists:</string>
    <string name="info_items">number of items:</string>
    <string name="info_total">total:</string>
    <string name="info_button_archive">Archive to file</string>
    <string name="info_button_restore">Restore from file</string>
    <string name="info_button_empty">Empty</string>
    <string name="info_busy">Fetching info...</string>
    <string name="info_confirm_erase">ERASE ALL DATA?</string>

    <string name="saver_restore_title">File data info:</string>
    <string name="saver_file_size">file size, bytes:</string>
    <string name="saver_elements_number">number of elements:</string>
    <string name="saver_confirm_restore">The next processing will replace your current data!</string>



    <string name="bytes_saved">bytes written into the file</string>
    <string name="lists_updated">lists updated</string>
    <string name="load_title">Data loading</string>
    <string name="load_to_insert">lists to insert:</string>
    <string name="load_to_update">lists to update:</string>
    <string name="load_success">Data successfully updated</string>


    <!-- MAIN -->
    <string name="main_title">All lists</string>
    <string name="main_empty">You haven\'t got any list yet\nPress \'+\' to create a new one</string>
    <string name="main_add_menu">New list</string>
    <string name="main_add_hint">The list name</string>
    <string name="main_menu_save">Save all to a file</string>
    <string name="main_menu_load">Import lists from a file</string>
    <string name="main_menu_clear">Erase all data</string>
    <string name="main_clear_message">Erase all data?</string>

    <!-- LIST -->
    <string name="list_empty">No items in the list\nPress \'+\' to create new</string>
    <string name="list_delete_alert_title">Delete list</string>
    <string name="list_delete_alert_text">Are you sure you want to delete this list and all it\'s items?</string>
    <string name="list_menu_add">Add item</string>
    <string name="list_menu_rename">Rename list</string>
    <string name="list_menu_delete">Delete list</string>
    <string name="list_menu_help">Help</string>
    <string name="list_menu_save_json">Save the list to a file</string>
    <string name="list_menu_save_xml">Save as XML</string>
    <string name="list_save_ok">The list was saved</string>
    <string name="list_save_error">An error occurred</string>

    <!-- ITEM -->
    <string name="item_name_hint">Name</string>
    <string name="item_descr_hint">Description</string>
    <string name="item_checked_text">Done</string>
    <string name="item_button_delete">Delete</string>
    <string name="item_button_save">Save</string>
    <string name="item_error">The name can\'t be empty</string>

    <!-- LIST NAME DIALOG -->
    <string name="dialog_name_hint">List name</string>
    <string name="dialog_title_new">New list</string>
    <string name="dialog_title_rename">Rename list</string>
    <string name="dialog_title_save">Export data to </string>
    <string name="dialog_message_save">Input filename</string>
    <string name="dialog_error">The name can\'t be empty</string>

    <!-- SAVE/LOAD DIALOGs -->
    <string name="dlg_save_title">Save</string>
    <string name="dlg_save_all_message">Save all data in JSON format. Input file name.</string>

    <!-- HELP -->
    <string name="help_title">Help</string>
    <!--about-->
    <string name="help_about_title">About</string>
    <string name="help_version_label">Version:</string>
    <!--web view-->
    <string name="help_webview">file:///android_asset/help.html</string>


</resources>
