<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_add"
        android:icon="@drawable/ic_plus_box_white_48"
        app:showAsAction="always"
        android:title="@string/list_menu_add" />

    <item android:id="@+id/menu_save_json"
        android:title="@string/list_menu_save_json" />

    <item android:id="@+id/menu_save_xml"
        android:title="@string/list_menu_save_xml" />

    <item android:id="@+id/menu_rename"
        android:title="@string/list_menu_rename" />

    <item android:id="@+id/menu_delete"
        android:title="@string/list_menu_delete" />

    <item android:id="@+id/menu_help"
        android:title="@string/list_menu_help" />

</menu>